# dotfiles

./: .gitignore  README.md  install.sh
.claude/: CLAUDE.md
config/: create_symlinks.sh
config/alacritty/: alacritty.toml
config/astal-bar/: app.ts  style.scss  tsconfig.json
config/bat/: config
config/claude/: CLAUDE.md  settings.json
config/dunst/: dunstrc
config/git/: config  ignore
config/glow/: github-dark.json  glow.yml
config/gnome/: dconf-settings.ini
config/grinch/: Cargo.toml
config/grinch/src/: config.rs  daemon.rs  icons.rs  main.rs  style.css  style.rs
config/grinch/src/apps/: desktop.rs  launch.rs  mod.rs
config/grinch/src/ui/: input.rs  mod.rs  nav.rs  tile.rs
config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf
config/hyprpanel/: config.json  modules.scss
config/kitty/: kitty.conf
config/lazygit/: config.yml  delta-wrapper.sh
install/: install-fedora-nerd-font.sh  install-fedora.sh  install-linux.sh  install-macos.sh  install-nixos.sh  install.json  install.sh
nixos/: apps.nix  configuration.nix  create_symlinks.sh  development.nix  device.options.nix  display_manager.nix  gaming.nix  gnome-apps.nix  gnome.nix  hardware.nix  howdy.nix  hyprland.nix  main_user.nix  mime_apps.nix  music.nix  nix.nix  power.nix  printing.nix  remote.nix  specialisation.nix  sway.nix  system.nix  tablet.nix  transcription.nix  variables.nix  videomaking.nix  wm-common.nix  wm-helpers.nix
scripts/: ai.sh  create_symlinks.sh  d.sh  games.json  setup-device.sh  td.sh  tmux_env.sh  transcribe-audio.sh  tt.sh  zd.sh  zellij_env.sh
(+171 files in other folders)
